--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.container{
+  margin-top: 5%;
+    margin-left: 25%;
+}
+
+.row{
+  margin-top:1%;
+}
+.form-control{
+  width: 50%;
+}
